<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp"
        android:focusable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/itemImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/plain"
                android:adjustViewBounds="true"
                android:contentDescription="itemImg"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="5"
            android:orientation="vertical">
            <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="start"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="start"
                android:text="@string/stock"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="normal" />

            </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_add_box_24">
        </Button>
        <TextView
android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="start"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_add_box_24">
        </Button>

    </LinearLayout>

</LinearLayout>
